Update reactive design for mobiles

--- a/auth/confirm.html
+++ b/auth/confirm.html
@@ -82,6 +82,13 @@
     }
     .btn:hover { opacity: 0.9; transform: translateY(-1px); }
     .btn:active { transform: translateY(0); }
+
+    @media (max-width: 480px) {
+      body { padding: 16px; }
+      .card { padding: 32px 20px; }
+      h1 { font-size: 1.25rem; }
+      .btn { width: 100%; text-align: center; padding: 14px 20px; }
+    }
   </style>
 </head>
 <body>
